Fix greedy-nav false collapse when width is sufficient.
Stop double-reserving toolbar width in JS; use scrollWidth for overflow; restore hamburger only when needed.

--- a/_sass/_animal-island-components.scss
+++ b/_sass/_animal-island-components.scss
@@ -15,11 +15,7 @@
   padding-right: 0.5rem;
   box-sizing: border-box;
 
-  > button {
-    display: none !important;
-  }
-
-  .hidden-links {
+  > button.hidden {
     display: none !important;
   }
 
