--- a/_sass/_animal-island-overrides.scss
+++ b/_sass/_animal-island-overrides.scss
@@ -115,11 +115,7 @@ a {
     }
   }
 
-  > button {
-    display: none !important;
-  }
-
-  .hidden-links {
+  > button.hidden {
     display: none !important;
   }
 }
